--- a/src/style.css
+++ b/src/style.css
@@ -186,3 +186,14 @@ a {
   -webkit-animation-name: memo-leave;
   animation-name: memo-leave;
 }
+
+/* wallHeader */
+.empty-page {
+  font-size: 30px;
+  text-align: center;
+  color: #4D4D4D;
+}
+.wall-info {
+  font-size: 30px;
+  text-align: center;
+}
